Update jvm-setup.md